--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get upgrade
+        sudo apt install software-properties-common
         sudo apt -y install python3 python-pip python3-pip cpio wget
         pip3 install twrpdtgen
         mkdir dt
