--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,10 +19,10 @@ jobs:
       
     - name: Prepare the environment
       run: |
-        sudo apt-get update
-        sudo apt-get upgrade
+        sudo apt-get -y update
+        sudo apt-get -y upgrade
         sudo apt install software-properties-common
-        sudo apt -y install python3 python-pip python3-pip cpio wget
+        pip3 install -y install python3 python-pip python3-pip cpio wget
         pip3 install twrpdtgen
         mkdir dt
       
