--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,9 +19,8 @@ jobs:
       
     - name: Prepare the environment
       run: |
-        sudo apt-get -y update
-        sudo apt-get -y upgrade
-        sudo apt install software-properties-common
+        sudo apt update
+        sudo apt -y install python python3 python-pip python3-pip cpio wget
         pip3 install twrpdtgen
         mkdir dt
       
